Source/WebKit/qt/tests/tests.pri
@@ -5,6 +5,15 @@ VPATH += $$_PRO_FILE_PWD_
 # Add the tst_ prefix, In QTDIR_build it's done by qttest_p4.prf
 CONFIG(QTDIR_build) { load(qttest_p4) }
 ELSE { TARGET = tst_$$TARGET }
+
+# Load mobilityconfig if Qt Mobility is available
+load(mobilityconfig, true)
+contains(MOBILITY_CONFIG, multimedia) {
+    # This define is used by tests depending on Qt Multimedia
+    DEFINES -= ENABLE_QT_MULTIMEDIA=0
+    DEFINES += ENABLE_QT_MULTIMEDIA=1
+}
+
 SOURCES += $${TARGET}.cpp
 INCLUDEPATH += \
     $$PWD \
